--- a/07.01-206-divs-flexbox-starter/index.html
+++ b/07.01-206-divs-flexbox-starter/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Make me into a grid!</title>
+        <title>!</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -21,16 +21,19 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
        
-        <section class="wrapper">
-            <div class="div-1">
-                Div 1
+        <section class="flex-container">
+            <header>Jordan K. Baker</header>
+            <main>Main</main>
+            <div id="div-1" class="flex-items">
+                I was born and raised in NYC, but my real roots reach to South America. I owe my travel bug to being a first generation American with family all over the world - we were alwayson on the go!
             </div>
-            <div class="div-2">
-                Div 2
+            <div id="div-2" class="flex-items">
+                My passion: I LOVE music - it's one of the most powerful and diverse methods for expression & communication. In the meantime, I get my fix by going to lots and lots of concerts. I'm at 160 and counting.
             </div>
-            <div class="div-3">
-                Div 3
+            <div id="div-3" class="flex-items">
+                A fun fact: As a true New Yorker, I'm slightly embarssed to say that I only learned how to ride a plain stationary bike 1 year ago, and have yet to learn to drive. But, the real takeaway is that I'm learning!
             </div>
+            <footer> © 2022 Jordan K. Baker. All rights reserved.</footer>
         </section>    
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
